[package]
name = "img2raw"
version = "0.2.1"
edition = "2018"
license = "MIT"

repository = "https://github.com/TomCrypto/img2raw"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Convert images to raw pixel data"
categories = ["multimedia::images", "no-std"]
readme = "README.md"

[[bin]]
name = "img2raw"
path = "bin/main.rs"

[dependencies.byteorder]
version = "1.3"

[dependencies.exitfailure]
version = "0.5"

[dependencies.failure]
version = "0.1"

[dependencies.half]
version = "1.3"

[dependencies.image]
version = "0.22"

[dependencies.rayon]
version = "1.2"

[dependencies.structopt]
version = "0.3"

[dependencies.zerocopy]
version = "0.2"
