[package]
name = "img2raw"
version = "0.3.4"
edition = "2018"
license = "MIT"

repository = "https://github.com/TomCrypto/img2raw"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Type definitions for img2raw headers"
categories = ["multimedia::images", "no-std"]
readme = "README.md"

[dependencies.zerocopy]
version = "0.2"
optional = true

[features]
default = ["zerocopy"]
